Update navigation links to point to index.html instead of Home.html

--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><a class="hover" href="Home.html" ><img  src="Crosshair.png">Domovská stránka</a></li>
+                <li><a class="hover" href="index.html" ><img  src="Crosshair.png">Domovská stránka</a></li>
                 <li><a class="active" href="Fotogalerie.html"><img  src="Crosshair.png">Fotogalerie</a></li>
                 <li><a href="SoutěžeAVýsledky.html" class="hover"><img  src="Crosshair.png">Soutěže a výsledky</a></li>
                 <li><a href="Další.html" class="hover"><img  src="Crosshair.png">Další</a></li>
