--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="Home.html" class="active"><img  src="Crosshair.png">Domovská stránka</a></li>
+                <li><a href="index.html" class="active"><img  src="Crosshair.png">Domovská stránka</a></li>
                 <li><a href="Fotogalerie.html" class="hover"><img  src="Crosshair.png">Fotogalerie</a></li>
                 <li><a href="SoutěžeAVýsledky.html" class="hover"><img  src="Crosshair.png">Soutěže a výsledky</a></li>
                 <li><a href="Další.html" class="hover"><img  src="Crosshair.png">Další</a></li>
