Refactor HTML structure for consistency and clarity

--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -54,7 +54,7 @@
 </div>
 
 <section class="image-section">
-    <a href="Home.html">
+    <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
