--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </section>
 
 <section class="image-section">
-    <a href="Home.html">
+    <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
