--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Střelecký klub Ostroměř</title>
-    <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="Styles-Token.css">
-    <link rel="stylesheet" href="Style-Foto-Flex.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="utilities.css">
+    <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="theme.css">
+    <link rel="stylesheet" href="Page.css">
 </head>
 <body>
     <header>
