--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </article>
 
     <article class="box">
-        <h2>Nadchízející soutěže</h2>
+        <h2>Nadchá  zející soutěže</h2>
         <ul>
             <h3>Jarní soutěž</h3>
             <p><strong>Datum: </strong>23.3.2024 (sobota)</p>
@@ -76,12 +76,14 @@
       </a>
 </section>  
 
-    
+<h1>Ukázka fetch z TXT souboru</h1>
+  <pre id="output">Načítám...</pre>
+  <script src="script.js"></script>   
 
 
 
 <footer>
-    <p>Marek Lánský copyright datum posledí úpravy: 3.11.2025</p>
+    <p>Studentský projekt | Marek Lánský | Datum poslední úpravy 11.11.2025</p>
 </footer>
     
 </body>
