--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </section>  
 
 <h1>Ukázka fetch z TXT souboru</h1>
-  <pre id="output">Načítám...</pre>
+  <p id="demo">Načítám...</p>
   <script src="script.js"></script>   
 
 
