--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
     <article class="box">
         <h2>Aktuality</h2>
         <ul>
-        <p>Přehlídka vojenské techniky</p>
-        <p>Lekce pro zíjemce o střelecký průkaz</p>
-        <p>Nove vybavení střelnice - terče, zbraně</p>
-        <p>Střelnice pro veřejnost otevřena každou poslední sobotu v měsíci od 9:00 do 15:00</p>
+        <p id="demo">Načítám...</p>
 
         <button onclick="location.href='Fotogalerie.html'" class="button" type="button">Podívat se do galerie</button>
         <p>Poslední aktualizace: 22.10.2025</p>
