--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -32,27 +32,14 @@
 </section>    
 
 <div class="gallery">
+  <img src="Fotka1.webp">
+  <img src="Fotka2.webp">
+  <img src="Fotka3.webp">
   <img src="slon.jfif">
   <img src="Naboje.jpg">
   <img src="target.jpg">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
+  
+  
   
 </div>
 
