--- a/Kontakty.html
+++ b/Kontakty.html
@@ -35,10 +35,7 @@
     <section class="container">
     <article class="box">
         <h2>Kontaktní osoby</h2>
-        <p>hospodář Miloslav Adamec, 737 902 150</p>
-        <p>předsedkyně Alena Krejčová, 606 743 055</p>
-        <p>jednatel Jaromír Pácal, 605 929 968</p>
-        <p>Dana Hermochová, 724 091 382 - příjem přihlášek na závody</p>
+        <p id="kontakty">Načítám...</p>
 
         <iframe alt="Google mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2544.3569032682576!2d15.553048375788265!3d50.378544992539595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e9eb1e4ed8bed%3A0xfcedd18f691a2934!2zU1BPUlRPVk7EmiBTVMWYRUxFQ0vDnSBLTFVCIE9TVFJPTcSaxZg!5e0!3m2!1scs!2scz!4v1760954552269!5m2!1scs!2scz"
         allowfullscreen=""
@@ -62,5 +59,6 @@
         <p>Marek Lánský copyright datum posledí úpravy: 3.11.2025</p>
     </footer>
 
+    <script src="script.js"></script> 
     </body>
     </html>
