--- a/SoutěžeAVýsledky.html
+++ b/SoutěžeAVýsledky.html
@@ -37,48 +37,14 @@
     <article class="box">
         <h2>Soutěže</h2>
         <ul>
-            <h3>Jarní soutěž</h3>
-            <p><strong>Datum: </strong>23.3.2024 (sobota)</p>
-            <a href="http://strelniceostromer.wz.cz/2024_JarniSoutez.pdf" target="_blank">
-                <p>Prepozice závodu</p>
-            </a>
-            
-            <h3>Velká cena Ostroměře</h3>
-            <p><strong>Datum: </strong>10.8.2024 (sobota)</p>
-            <p><strong>Disciplína: </strong>LM, SM - 60 ran</p>
-            <a href="http://strelniceostromer.wz.cz/VelkaCenaOstromere24.pdf" target="_blank">
-                <p>Prepozice závodu</p>
-            </a>
-
-            <h3>Podzimní soutěž z předovek</h3>
-            <p><strong>Datum: </strong>19.10.2024 (sobota)</p>
-            <a href="http://strelniceostromer.wz.cz/2024_Podzimni_soutez.pdf" target="_blank">
-                <p>Prepozice závodu</p>
-            </a>
-
+            <p id="dalsisouteze">Načítám...</p>
         </ul>
     </article>
 
     <article class="box">
         <h2>Výsledky</h2>
         <ul>
-            <h3>Jarní soutěž</h3>
-            <a href="http://strelniceostromer.wz.cz/2025_JarniSoutezVysledky.pdf" target="_blank">
-                <p>Výsledky</p>
-            </a>
-
-            <h3>Velká cena Ostroměře</h3>
-            <a href="http://strelniceostromer.wz.cz/Ostromer_250809.pdf" target="_blank">
-                <p>Výsledky - LM-60</p>
-            </a>
-            <a href="http://strelniceostromer.wz.cz/Ostromer_250810.pdf" target="_blank">
-                <p>Výsledky - LM3x20</p>
-            </a>
-
-            <h3>Podzimní soutěž z předovek</h3>
-            <a href="http://strelniceostromer.wz.cz/OstromerHistor20251018.pdf" target="_blank">
-                <p>Výsledky</p>
-            </a>
+            <p id="vysledky">Načítám...</p>
         </ul>
     </article>
 </section>
@@ -97,5 +63,6 @@
     <p>Marek Lánský copyright datum posledí úpravy: 3.11.2025</p>
 </footer>
     
+<script src="script.js"></script> 
 </body>
 </html>
