--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <p id="aktuality">Načítám...</p>
 
         <button onclick="location.href='Fotogalerie.html'" class="button" type="button">Podívat se do galerie</button>
-        <p>Poslední aktualizace: 22.10.2025</p>
+        <p id="datum">Načítám...</p>
         </ul>
     </article>
 
     <article class="box">
-        <h2>Nadchá  zející soutěže</h2>
+        <h2>Nadcházející soutěže</h2>
         <ul>
             <p id="souteze">Načítám...</p>
             
@@ -69,9 +69,7 @@
       </a>
 </section>  
 
-<h1>Ukázka fetch z TXT souboru</h1>
-  <p id="demo">Načítám...</p>
-  <script src="script.js"></script>   
+
 
 
 
@@ -79,5 +77,6 @@
     <p>Studentský projekt | Marek Lánský | Datum poslední úpravy 11.11.2025</p>
 </footer>
     
+<script src="script.js"></script> 
 </body>
 </html>
