--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -32,12 +32,12 @@
 </section>    
 
 <div class="gallery">
-  <img src="Fotka1.webp">
-  <img src="Fotka2.webp">
-  <img src="Fotka3.webp">
-  <img src="slon.jfif">
-  <img src="Naboje.jpg">
-  <img src="target.jpg">
+  <img src="Fotka1.webp" alt="Foto1">
+  <img src="Fotka2.webp" alt="Foto2">
+  <img src="Fotka3.webp" alt="Foto3">
+  <img src="slon.jfif" alt="Foto4">
+  <img src="Naboje.jpg" alt="Foto5">
+  <img src="target.jpg" alt="Foto6">
   
   
   
