--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     <article class="box">
         <h2>Aktuality</h2>
         <ul>
-        <p id="aktuality">Načítám...</p>
-
+            <div>
+            <p id="aktuality">Načítám...</p>
+            </div>
         <button onclick="location.href='Fotogalerie.html'" class="button" type="button">Podívat se do galerie</button>
         <p id="datum">Načítám...</p>
         </ul>
