--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <li>
             <p id="aktuality">Načítám...</p>
             </li>
-        <button onclick="location.href='Fotogalerie.html'" class="button" type="button">Podívat se do galerie</button>
+        
+        <li><button onclick="location.href='Fotogalerie.html'" class="button" type="button">Podívat se do galerie</button></li>
         <p id="datum">Načítám...</p>
         </ul>
     </article>
