--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 
 <section class="container">
+    <div>
     <article class="box">
         <h2>Aktuality</h2>
         <ul>
@@ -47,6 +48,7 @@
             <li><p id="datum">Načítám...</p></li>
         </ul>
     </article>
+    </div>
 
     <article class="box">
         <h2>Nadcházející soutěže</h2>
