--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 </section>
 
 <section class="image-section">
+    <div>
     <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
       <img src="logo-css.png" alt="Znak českého střelckého svazu">
       </a>
+    </div>
 </section>  
 
 
