--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </section>    
 
 
-<div>
-<section class="container">
+
+<div class="container">
     
     <article class="box">
         <h2>Aktuality</h2>
@@ -59,8 +59,8 @@
             
         </ul>
     </article>
-</section>
 </div>
+
 
 <div>
 <section class="image-section">
