--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -43,14 +43,14 @@
   
 </div>
 
-<section class="image-section">
+<div class="image-section">
     <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
       <img src="logo-css.png" alt="Znak českého střelckého svazu">
       </a>
-</section> 
+</div> 
 
 <footer>
     <p>Marek Lánský copyright datum posledí úpravy: 3.11.2025</p>
