--- a/SoutěžeAVýsledky.html
+++ b/SoutěžeAVýsledky.html
@@ -33,30 +33,30 @@
 
 
 
-<section class="container">
+<div class="container">
     <article class="box">
         <h2>Soutěže</h2>
         <ul>
-            <p id="dalsisouteze">Načítám...</p>
+            <li><p id="dalsisouteze">Načítám...</p></li>
         </ul>
     </article>
 
     <article class="box">
         <h2>Výsledky</h2>
         <ul>
-            <p id="vysledky">Načítám...</p>
+            <li><p id="vysledky">Načítám...</p></li>
         </ul>
     </article>
-</section>
+</div>
 
-<section class="image-section">
+<div class="image-section">
     <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
       <img src="logo-css.png" alt="Znak českého střelckého svazu">
       </a>
-</section> 
+</div> 
 
 
 <footer>
