--- a/Další.html
+++ b/Další.html
@@ -32,38 +32,38 @@
     </div>
 </section>    
 
-<section class="container">
+<div class="container">
     <article class="box">
         <h2>Vybavení střelnice</h2>
         <ul>
-        <p>Padesátimetrové otevřené střeliště se šestnácti krytými stavy</p>
-        <p>Osm stavů vzduchovkové střelnice v prvním patře zděné budovy.</p>
-        <p>Mobilní terčová zařízení s elektrickým ovládáním posunu terčového pásu - použití pouze při závodech.</p>
-        <p>Různé papírové a kovové terče s možným ukotvením na celé ploše střeliště. Též možno zapůjčit terče otočné.</p>
+        <li><p>Padesátimetrové otevřené střeliště se šestnácti krytými stavy</li></p>
+        <li><p>Osm stavů vzduchovkové střelnice v prvním patře zděné budovy.</li></p>
+        <li><p>Mobilní terčová zařízení s elektrickým ovládáním posunu terčového pásu - použití pouze při závodech.</li></p>
+        <li><p>Různé papírové a kovové terče s možným ukotvením na celé ploše střeliště. Též možno zapůjčit terče otočné.</li></p>
         </ul>   
     </article>
 
     <article class="box">
         <h2>Další služby</h2>
         <ul>
-            <p><strong>PRÁCE INSTRUKTORA: </strong>sportovní klub poskytuje instruktora střelby jak pro krátké, tak i dlouhé zbraně na vyžádání. Na případné sporotvní akce po předcházející dohodě zajistíme rozhodčí.</p>
-            <p><strong>PRODEJ TERČŮ: </strong>na střelnici je možné si zakoupit běžné sportovní terče.</p>
-            <p><strong>USKLADNĚNÍ ZBRANÍ: </strong>dočasně uskladníme vaše zbraně na střelnici v klubových trezorech.</p>
-            <p><strong>OBČERSTVENÍ: </strong>běžně je v nabídce limo, káva, čaj.</p>
-            <p><strong>NASTŘELENÍ ZBRANĚ KLIENTA: </strong>s oporou i z ruky, provádíme i drobné opravy (např. střela uvízlá v hlavni apod.)</p>
+            <li><p><strong>PRÁCE INSTRUKTORA: </strong>sportovní klub poskytuje instruktora střelby jak pro krátké, tak i dlouhé zbraně na vyžádání. Na případné sporotvní akce po předcházející dohodě zajistíme rozhodčí.</li></p>
+            <li><p><strong>PRODEJ TERČŮ: </strong>na střelnici je možné si zakoupit běžné sportovní terče.</li></p>
+            <li><p><strong>USKLADNĚNÍ ZBRANÍ: </strong>dočasně uskladníme vaše zbraně na střelnici v klubových trezorech.</li></p>
+            <li><p><strong>OBČERSTVENÍ: </strong>běžně je v nabídce limo, káva, čaj.</li></p>
+            <li><p><strong>NASTŘELENÍ ZBRANĚ KLIENTA: </strong>s oporou i z ruky, provádíme i drobné opravy (např. střela uvízlá v hlavni apod.)</li></p>
             
         </ul>
     </article>
-</section>
+</div>
 
-<section class="image-section">
+<div class="image-section">
     <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
       <img src="logo-css.png" alt="Znak českého střelckého svazu">
       </a>
-</section>  
+</div>  
 
 <footer>
     <p>Marek Lánský copyright datum posledí úpravy: 3.11.2025</p>
