--- a/Kontakty.html
+++ b/Kontakty.html
@@ -32,7 +32,7 @@
         </div>
     </section>  
 
-    <section class="container">
+    <div class="container">
     <article class="box">
         <h2>Kontaktní osoby</h2>
         <p id="kontakty">Načítám...</p>
@@ -42,16 +42,16 @@
         loadinfg ="lazy"
         ></iframe>
     </article>
-    </section>
+    </div>
 
-    <section class="image-section">
+    <div class="image-section">
     <a href="index.html">
       <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
       </a>
       <a href="https://www.shooting.cz/cs" target="_blank">
       <img src="logo-css.png" alt="Znak českého střelckého svazu">
       </a>
-    </section> 
+    </div> 
     
     
 
