--- a/Další.html
+++ b/Další.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Czech">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,21 +36,21 @@
     <article class="box">
         <h2>Vybavení střelnice</h2>
         <ul>
-        <li><p>Padesátimetrové otevřené střeliště se šestnácti krytými stavy</li></p>
-        <li><p>Osm stavů vzduchovkové střelnice v prvním patře zděné budovy.</li></p>
-        <li><p>Mobilní terčová zařízení s elektrickým ovládáním posunu terčového pásu - použití pouze při závodech.</li></p>
-        <li><p>Různé papírové a kovové terče s možným ukotvením na celé ploše střeliště. Též možno zapůjčit terče otočné.</li></p>
+        <li><p>Padesátimetrové otevřené střeliště se šestnácti krytými stavy</p></li>
+        <li><p>Osm stavů vzduchovkové střelnice v prvním patře zděné budovy.</p></li>
+        <li><p>Mobilní terčová zařízení s elektrickým ovládáním posunu terčového pásu - použití pouze při závodech.</p></li>
+        <li><p>Různé papírové a kovové terče s možným ukotvením na celé ploše střeliště. Též možno zapůjčit terče otočné.</p></li>
         </ul>   
     </article>
 
     <article class="box">
         <h2>Další služby</h2>
         <ul>
-            <li><p><strong>PRÁCE INSTRUKTORA: </strong>sportovní klub poskytuje instruktora střelby jak pro krátké, tak i dlouhé zbraně na vyžádání. Na případné sporotvní akce po předcházející dohodě zajistíme rozhodčí.</li></p>
-            <li><p><strong>PRODEJ TERČŮ: </strong>na střelnici je možné si zakoupit běžné sportovní terče.</li></p>
-            <li><p><strong>USKLADNĚNÍ ZBRANÍ: </strong>dočasně uskladníme vaše zbraně na střelnici v klubových trezorech.</li></p>
-            <li><p><strong>OBČERSTVENÍ: </strong>běžně je v nabídce limo, káva, čaj.</li></p>
-            <li><p><strong>NASTŘELENÍ ZBRANĚ KLIENTA: </strong>s oporou i z ruky, provádíme i drobné opravy (např. střela uvízlá v hlavni apod.)</li></p>
+            <li><p><strong>PRÁCE INSTRUKTORA: </strong>sportovní klub poskytuje instruktora střelby jak pro krátké, tak i dlouhé zbraně na vyžádání. Na případné sporotvní akce po předcházející dohodě zajistíme rozhodčí.</p></li>
+            <li><p><strong>PRODEJ TERČŮ: </strong>na střelnici je možné si zakoupit běžné sportovní terče.</p></li>
+            <li><p><strong>USKLADNĚNÍ ZBRANÍ: </strong>dočasně uskladníme vaše zbraně na střelnici v klubových trezorech.</p></li>
+            <li><p><strong>OBČERSTVENÍ: </strong>běžně je v nabídce limo, káva, čaj.</p></li>
+            <li><p><strong>NASTŘELENÍ ZBRANĚ KLIENTA: </strong>s oporou i z ruky, provádíme i drobné opravy (např. střela uvízlá v hlavni apod.)</p></li>
             
         </ul>
     </article>
