--- a/Kontakty.html
+++ b/Kontakty.html
@@ -37,9 +37,9 @@
         <h2>Kontaktní osoby</h2>
         <p id="kontakty">Načítám...</p>
 
-        <iframe alt="Google mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2544.3569032682576!2d15.553048375788265!3d50.378544992539595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e9eb1e4ed8bed%3A0xfcedd18f691a2934!2zU1BPUlRPVk7EmiBTVMWYRUxFQ0vDnSBLTFVCIE9TVFJPTcSaxZg!5e0!3m2!1scs!2scz!4v1760954552269!5m2!1scs!2scz"
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2544.3569032682576!2d15.553048375788265!3d50.378544992539595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e9eb1e4ed8bed%3A0xfcedd18f691a2934!2zU1BPUlRPVk7EmiBTVMWYRUxFQ0vDnSBLTFVCIE9TVFJPTcSaxZg!5e0!3m2!1scs!2scz!4v1760954552269!5m2!1scs!2scz"
         allowfullscreen=""
-        loadinfg ="lazy"
+        loading ="lazy"
         ></iframe>
     </article>
     </div>
