--- a/Kontakty.html
+++ b/Kontakty.html
@@ -45,9 +45,7 @@
     </div>
 
     <div class="image-section">
-        <a href="index.html">
-            <img src="Logo.png" alt="Znak střeleckého klubu Ostroměř">
-        </a>
+        <a href="index.html"><img src="Logo.png" alt="Znak střeleckého klubu Ostroměř"></a>
         <a href="https://www.shooting.cz/cs" target="_blank"><img src="logo-css.png" alt="Znak českého střelckého svazu"></a>
     </div> 
     
