--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html" class="active"><img  src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
                 <li><a href="Fotogalerie.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Fotogalerie</a></li>
-                <li><a href="SoutěžeAVýsledky.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Soutěže a výsledky</a></li>
+                <li><a href="SoutezeAVysledky.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Soutěže a výsledky</a></li>
                 <li><a href="Další.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Další</a></li>
                 <li><a href="Kontakty.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Kontakty</a></li>
                 
@@ -53,7 +53,7 @@
         <h2>Nadcházející soutěže</h2>
             <ul>
                 <li><p id="souteze">Načítám...</p></li>
-                <li><button onclick="location.href='SoutěžeAVýsledky.html'" class="button" type="button">Zjistit více</button></li>
+                <li><button onclick="location.href='SoutezeAVysledky.html'" class="button" type="button">Zjistit více</button></li>
             </ul>
     </article>
 </div>
