--- a/Dalsi.html
+++ b/Dalsi.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
                 <li><a href="Fotogalerie.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Fotogalerie</a></li>
                 <li><a href="SoutezeAVysledky.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Soutěže a výsledky</a></li>
-                <li><a href="Další.html" class="active"><img  src="Crosshair.png" alt="Crosshair">Další</a></li>
+                <li><a href="Dalsi.html" class="active"><img  src="Crosshair.png" alt="Crosshair">Další</a></li>
                 <li><a href="Kontakty.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Kontakty</a></li>
 
                 
