--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -18,7 +18,7 @@
                 <li><a class="hover" href="index.html" ><img  src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
                 <li><a class="active" href="Fotogalerie.html"><img  src="Crosshair.png" alt="Crosshair">Fotogalerie</a></li>
                 <li><a href="SoutezeAVysledky.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Soutěže a výsledky</a></li>
-                <li><a href="Další.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Další</a></li>
+                <li><a href="Dalsi.html" class="hover"><img  src="Crosshair.png" alt="Crosshair">Další</a></li>
                 <li><a class="hover" href="Kontakty.html" ><img  src="Crosshair.png" alt="Crosshair">Kontakty</a></li>
 
             </ul>
