--- a/Fotogalerie.html
+++ b/Fotogalerie.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="theme.css">
-    <link rel="stylesheet" href="Page.css">
+
 </head>
 <body>
     <header>
@@ -23,7 +22,7 @@
                 <span></span>
             </div>
             <ul class="menu__list" id="link">
-                <li class="menu__item active"><a href="index.html" class="menu__link p-2 text-center" ><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
+                <li class="menu__item   "><a href="index.html" class="menu__link p-2 text-center" ><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
                 <li class="menu__item"><a href="Fotogalerie.html" class="menu__link p-2 text-center active"><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Fotogalerie</a></li>
                 <li class="menu__item"><a href="SoutezeAVysledky.html" class="menu__link p-2 text-center"><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Soutěže a výsledky</a></li>
                 <li class="menu__item"><a href="Dalsi.html" class="menu__link p-2 text-center"><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Další</a></li>
@@ -63,6 +62,7 @@
     <p>Kontatkní údaje: lanskma3@uhk.cz | Datum poslední úpravy 11.11.2025</p>    
     <p><strong>Obsah je smyšlený a slouží ke studijním účelům</strong></p>
 </footer>
+
     <script src="script.js"></script> 
 </body>
 </html>
