--- a/Kontakty.html
+++ b/Kontakty.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="layout.css">
+</head>
 <header>
         <nav class="menu relative flex text-center">
             
@@ -19,7 +20,7 @@
                 <span></span>
             </div>
             <ul class="menu__list" id="link">
-                <li class="menu__item active"><a href="index.html" class="menu__link p-2 text-center" ><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
+                <li class="menu__item "><a href="index.html" class="menu__link p-2 text-center" ><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Domovská stránka</a></li>
                 <li class="menu__item"><a href="Fotogalerie.html" class="menu__link p-2 text-center"><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Fotogalerie</a></li>
                 <li class="menu__item"><a href="SoutezeAVysledky.html" class="menu__link p-2 text-center"><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Soutěže a výsledky</a></li>
                 <li class="menu__item"><a href="Dalsi.html" class="menu__link p-2 text-center"><img class="menu__logo" src="Crosshair.png" alt="Crosshair">Další</a></li>
